style.css
html
{
	padding-top: 0;
	margin-top: 0;
}

body
{
	background-color: #239DA3;
	color: #ffffff;
	text-align:left;
	font-family: Lato, Helvetica, Ariel, sans-serif;
	font-size: 1.25em;
	margin: 0;
}

#top
{
    position: relative;
	padding: 0;
	margin-top: 0;
	background-image: linear-gradient(200deg, rgba(39, 67, 158, 0) 50%, rgba(0, 27, 163, 0.41) 100%);
}

#top video
{
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: -1;
  object-fit: cover;
}

.navigation
{
	padding-top:26px;
	text-align:right;
	font-size:0.55em;
	text-size-adjust: none;
}

.navigation ul
{
    list-style-type: none;
    margin: 0;
    padding: 0;
}


.navigation li
{
    display: inline;
	padding-right: 3em;
}

a
{
    color: #ffffff;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}


.topcontent
{
	padding-top: 80px;
	padding-bottom: 80px;
	padding-left:20px;
	padding-right:20px;
	max-width: 720px;
	margin-left: auto;
	margin-right: auto;
	text-align: center
}

.topcontent hr
{
	border: 1px solid rgba(255,255,255,0.5);
	margin-top: 40px;
	margin-bottom:40px;
}
.logo img
{
	max-width: 100%;
	width: 512px;
}

.storebuttons
{
	margin-top: 32px;
}

.storebuttons img
{
	width: 225px;
	margin-left: 5px;
	margin-right: 5px;
}

.content
{
	text-align: center;
	max-width: 960px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 30px;
	margin-bottom: 30px;
}

.contentleft
{
	text-align: left;
	max-width: 960px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 30px;
	margin-bottom: 30px;
}

.signup
{
	font-size: .8em;
}

.signup input[type=email]
{
	background-color: #239DA3;
	border: solid 2px rgba(255,255,255,0.5);
	color: #ffffff;
	padding: 6px;
}

.signup input[type=submit]
{
	background-color: #ffffff;
	color: #239DA3;
	border: none;
	outline: none;
	text-transform: uppercase;
	padding: 8px 16px;
	cursor: pointer;
}


.signup input[type=email]:focus
{
	border: solid 2px #ffffff;
	outline: none;
}

.trailer
{
	text-align: center;
	background-image: linear-gradient(180deg, #2c727c 0%, #3a7782 7%);
}

.trailer iframe
{
	max-width: 100%;
	max-height: 56vw;
}

.gallery
{
	font-size: 0;
}

.gallery img
{
	width: 480px;
	max-width: 100%;
	margin: 0;
	padding: 0;
}

.gallery a
{
	margin: 0;
	padding: 0;
}

.flower
{
	width: 166px;
	padding-top:30px;
}

.bulletpoints
{
	width: 480px;
	max-width: 100%;
	text-align: left;
	display: inline-block;
	vertical-align:top
}

.bullet ul
{
	list-style-position: inside
}

.bulletpoints li
{
	margin-bottom: .75em;
}

.credits
{
	font-size:.9em;
}

#footer
{
	background-image: linear-gradient(180deg, #2c727c 0%, #3a7782 7%);
	margin-bottom:0;
	padding-bottom:20px;
}

#footer div
{
	text-align: center;
}

#footer li
{
    display: inline;
	padding-right: 1.5em;
	padding-left: 1.5em;
}

h1
{
	font-weight:normal;
	font-size:1.5em;
	margin-bottom:10px;
}

h2
{
	font-weight:normal;
	font-size:1.2em;
	margin-bottom:10px;
}

/* latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: url(Lato-Regular.ttf) format('ttf');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

